--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -1190,7 +1190,6 @@ form.member-profile-form {
 		}
 
 		.ss-tabset {	
-			z-index: 60;
 			@include border-radius(none);
 
 			.tab {
